@@ -44,7 +44,6 @@ SPEC_FILES = \
 	libsmdev.spec.in
 
 EXTRA_DIST = \
-	README.macosx \
 	$(DPKG_FILES) \
 	$(GETTEXT_FILES) \
 	$(PKGCONFIG_FILES) \
