@@ -2,7 +2,7 @@ This work was packaged for Debian by:
 
     Joachim Metz <joachim.metz@gmail.com> on @DPKG_DATE@
 
-It was downloaded from http://code.google.com/p/libsmdev/
+It was downloaded from https://github.com/libyal/libsmdev/
 
 Upstream Author(s):
 
