@@ -11,7 +11,7 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSNEJFQ1FqanFYVUU/"
 
 [git]
-url: "https://code.google.com/p/libsmdev/"
+url: "https://github.com/libyal/libsmdev.git"
 
 [tools]
 directory: "smdevtools"
