@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libsmdev.dll\0"
       VALUE "ProductName",		"libsmdev\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libsmdev/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libsmdev/\0"
     END
   END
   BLOCK "VarFileInfo"
