@@ -180,7 +180,7 @@ To have other code to determine if libsmdev was compiled with wide character sup
 
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libsmdev/
+https://github.com/libyal/libsmdev/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
