@@ -37,6 +37,10 @@ Deployment
 Test:
 * add autoconf/make test suite
 
+20140928
+* removed README.macosx
+* changes for project site move
+
 20140803
 * bug fix in Python-bindings
 
